force-app/main/default/objects/NS_Connector_Logs__c/NS_Connector_Logs__c.object-meta.xml
<CustomObject>
    <label>Logs</label>
    <nameField>
        <displayFormat>Log - {000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>