force-app/main/default/objects/NS_Connector_Logs__c/fields/Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>Logging_Level__c</fullName>
    <label>Logging Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>