force-app/main/default/objects/NS_Connector_Logs__c/fields/NS_Sync_Request__c.field-meta.xml
<CustomField>
    <fullName>NS_Sync_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NS Sync Request</label>
    <referenceTo>NS_Sync_Request__c</referenceTo>
    <relationshipLabel>NS Sync Requests</relationshipLabel>
    <relationshipName>NS_Sync_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>