force-app/main/default/objects/NS_Connector_Logs__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <inlineHelpText>Id of the source object record for which error has occurred.</inlineHelpText>
    <label>Source Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>